# Thesis

./: .gitignore  README.md  main.py  pyproject.toml
app/bert/: bert_test.py  bert_training.py
app/controllers/: InvokeController.py
app/evaluation/: batch_eval.py  eval_agent.py
app/evaluation/input/: questions.csv
app/evaluation/output/: results.csv
app/llm/: client.py  test_graph.py
app/llm/graph/: build.py
app/llm/graph/nodes/: bert_node.py
app/llm/tools/: db_tool.py  vectordb_tool.py
app/postgres/: db_connection.py
app/routes/: invoke.py
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ux.py
backend/app/bert/: bert_training.py
backend/app/llm/: client.py  state_types.py
backend/app/llm/graph/nodes/: general_agent.py  reccomandation_agent.py
backend/app/products/: products_download.py
backend/app/routes/: invoke.py
backend/tests/: test_client.py  test_db_connection.py  test_upload.py
bert/: bert_test.py  bert_training.py  data.csv
chromadb/: test_conn.py  upload_automotive.py  upload_fashion.py
data/: data.py
data/scripts/: download_data.py  process_data.py
data/scripts/All_beaty/: download_data.py  process_data.py
data/scripts/Automotive_games_fashion/: download.py  process.py
data/scripts/Books_Electronics/: download.py
db/: test_upload.py  upload.py  upload_beauty.py  upload_books.py  upload_electronics.py  upload_videogames.py
flagged/: log.csv
llm/: agent.py  client.py  state_types.py  test_graph.py  test_tool.py  test_tool2.py  types.py
llm/graph/: build.py
llm/graph/nodes/: bert_node.py  general_agent.py  reccomandation_agent.py
llm/memory_processor/: memory.py
llm/tools/: db_tool.py  vectordb_tool.py
pinecone/: upload.py
products/: generate_sql.py
products/sql_output/: divide_sql.py
src/thesis/: app.py  main.py
tests/: test_client.py  test_tool2.py  test_upload.py
