[project]
name = "thesis"
version = "0.1.0"
description = "AI agents per l'analisi e la generazione di recensioni di prodotti: un approccio basato su LLM e Sentiment Analysis"
authors = [
    {name = "Tommaso Biganzoli"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "datasets (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
