[project]
name = "thesis"
version = "0.1.0"
description = "AI agents per l'analisi e la generazione di recensioni di prodotti: un approccio basato su LLM e Sentiment Analysis"
authors = [
    {name = "Tommaso Biganzoli"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (<2.0.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "chromadb (>=1.0.3,<2.0.0)",
    "torch (==2.1.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
